--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.9.0",
     "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "react-iframe": "^1.8.0",
     "react-spring": "^8.0.27",
     "styled-components": "^4.3.2"
