--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.1.0",
     "gatsby": "^2.13.73",
+    "gatsby-background-image": "^0.8.12",
     "gatsby-image": "^2.2.10",
     "gatsby-plugin-manifest": "^2.2.6",
     "gatsby-plugin-offline": "^2.2.7",
@@ -17,6 +18,7 @@
     "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-source-filesystem": "^2.1.11",
     "gatsby-transformer-sharp": "^2.2.7",
+    "intersection-observer": "^0.7.0",
     "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
